--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-/StdIn.class
-/StdOut.class
-/StdDraw.class
-/PuzzleDrawer.class
-/ParallelDrawer.class
-/Main.class
-/StdDrawAddFunc.class
-/Randomizer.class
-/Test.class
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.bak
